syntax = "proto3";

package com.itlab1024.protobuf;

option java_multiple_files = true;
option java_package = "com.itlab1024.protobuf.protos.java";
option java_outer_classname = "AddressBookProto";

message Person {
  optional string name = 1;
  optional int32 id = 2;
  optional string email = 3;

  enum PhoneType {
    MOBILE = 0;
    HOME = 1;
    WORK = 2;
  }

  message PhoneNumber {
    optional string number = 1;
    optional PhoneType type = 2;
  }

  repeated PhoneNumber phones = 4;
}

message AddressBook {
  repeated Person people = 1;
}